=== master

* Support Dataset#window for WINDOW clause on MySQL 8 and SQLAnywhere (jeremyevans)

* Enable window function support on SQLAnywhere (jeremyevans)

* Support using a hash as a window function :frame option value, with support for ROWS/RANGE/GROUPS, numeric offsets, and EXCLUDE (jeremyevans)

* Allow using set_column_default with a nil value to remove the default value for a column on MySQL when the column is NOT NULL (jeremyevans)

=== 5.10.0 (2018-07-01)

* Use input type casts when using the postgres adapter with pg 0.18+ to reduce string allocations for some primitive types used as prepared statement arguments (jeremyevans)

* Assume local time if database timezone not specified when handling BC timestamps on JRuby 9.2.0.0 in the pg_extended_date_support extension (jeremyevans)

* Fix parsing of timetz types in the jdbc/postgresql adapter (jeremyevans)

* Make SQLTime.parse respect SQLTime.date and Sequel.application_timezone (jeremyevans)

* Add :top as an option in the list plugin (celsworth) (#1526)

* Fix Model#{ancestors,descendants,self_and_siblings} in the tree plugin when custom parent/children association names are used (jeremyevans) (#1525)

* Treat read-only mode error as disconnect error on mysql and mysql2 adapters, for better behavior on AWS Aurora cluster (jeremyevans)

* Don't use cached placeholder literalizers for in Dataset#{first,where_all,where_each,where_single_value} if argument is empty array or hash (jeremyevans)

* Support :tablespace option when adding tables, indexes, and materialized views on PostgreSQL (jeremyevans)

* Support :include option for indexes on PostgreSQL 11+ (jeremyevans)

* Allow the use of IN/NOT IN operators with set returning functions for Sequel::Model datasets (jeremyevans)

* Make many_to_pg_array associations in the pg_array_associations plugin work on PostgreSQL 11 (jeremyevans)

* Only load strscan library in pg_array extension if it is needed (jeremyevans)
